feat(university): add update functionality and enhance department DTO
- Added UpdateUniversityRequest class to handle university update requests
- Implemented functionality in UniversityService and UniversityController for updating universities
- Enhanced UniversityDepartmentDto to include university information
- Updated UniversityDepartmentService to map related university data to DTOs